--- a/recetas.html
+++ b/recetas.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Matias Chanquia"/>
   <meta name="copyright" content="Chef en tu casa"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chef en tu casa | Tortilla de papas</title>
+  <title>Chef en tu casa | Recetas</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
