actualizo los archivos

--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Chef en tu casa, una página con las recetas simples explicada en simples pasos por chefs expertos en la cocina."/>
-  <meta name="keywords" content="Cocina, Receta, Comida"/>
-  <meta name="author" content="Matias Chanquia"/>
-  <meta name="copyright" content="Chef en tu casa"/>
+  <meta name="description"
+    content="Chef en tu casa, una página con las recetas simples explicada en simples pasos por chefs expertos en la cocina." />
+  <meta name="keywords" content="Cocina, Receta, Comida" />
+  <meta name="author" content="Matias Chanquia" />
+  <meta name="copyright" content="Chef en tu casa" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chef en tu casa | Inicio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -39,18 +43,19 @@
 
     <nav id="nav" class="box-s flex">
       <ol class="flex">
-  
+
         <li> <a href="index.html"><img src="./img/nav-icons/home.png" alt="icono de inicio"> Inicio</a> </li>
-  
+
         <li> <a href="recetas.html"><img src="./img/nav-icons/recipe.png" alt="icono de recetas"> Recetas</a> </li>
-    
+
         <li> <a href="contacto.html"><img src="./img/nav-icons/faq.png" alt="icono de contacto"> Contacto</a> </li>
-  
+
       </ol>
     </nav>
 
     <div id="presentation-home" class="box-s flex">
-      <video class="box-s" src="./video/bife-frito.mp4" autoplay="autoplay" loop poster="./video/poster-bife.png" muted> </video>
+      <video class="box-s" src="./video/bife-frito.mp4" autoplay="autoplay" loop poster="./video/poster-bife.png" muted>
+      </video>
       <div id="presentation-text" class="box-s flex">
         <h2>Tripa vacía corazón sin alegría</h2>
         <p>Las mejores recetas simples de cocina las encontrarás aquí.</p>
@@ -61,7 +66,7 @@
 
   <main id="main" class="box-s">
     <section id="section-home-app" class="box-s">
-      <h4>Descarga la app <span class="name-page"> Chef en tu casa </span>   en tu celular!</h4>
+      <h4>Descarga la app <span class="name-page"> Chef en tu casa </span> en tu celular!</h4>
       <div class="img-phones flex">
         <img src="./img/phones/android.png" alt="logo de android">
         <img src="./img/phones/iphone.png" alt="logo de iphone">
@@ -70,73 +75,137 @@
     <section id="section">
       <h3 class="titulos-home">Nuestros cocineros</h3>
       <div id="cocineros-home" class="box-s flex">
-        <div class="flex cocineroX"> 
+        <div class="flex cocineroX">
           <h3>
             Damián Betular
           </h3>
           <img src="./img/cocinero-damian.jpg" alt="cocinero damian betular">
-          <a href="https://es.wikipedia.org/wiki/Dami%C3%A1n_Betular" target="_blank"><p>Saber más</p></a>
+          <a href="https://es.wikipedia.org/wiki/Dami%C3%A1n_Betular" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
         <div class="flex cocineroX">
           <h3>
             Salt Bae
           </h3>
           <img src="./img/cocinero-salt.jpg" alt="cocinero Salt Bae">
-          <a href="https://es.wikipedia.org/wiki/Salt_Bae" target="_blank"><p>Saber más</p></a>
+          <a href="https://es.wikipedia.org/wiki/Salt_Bae" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
         <div class="flex cocineroX">
           <h3>
             Maru Botana
           </h3>
           <img src="./img/cocinero-maru.jpg" alt="cocinera Maru Botana">
-          <a href="https://es.wikipedia.org/wiki/Maru_Botana" target="_blank"><p>Saber más</p></a>
+          <a href="https://es.wikipedia.org/wiki/Maru_Botana" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
         <div class="flex cocineroX">
           <h3>
             Gordon Ramsay
           </h3>
           <img src="./img/cocinero-gordon.jpg" alt="cocinera Gordon Ramsay">
-          <a href="https://es.wikipedia.org/wiki/Gordon_Ramsay" target="_blank"><p>Saber más</p></a>
+          <a href="https://es.wikipedia.org/wiki/Gordon_Ramsay" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
         <div class="flex cocineroX">
           <h3>
             Alain Ducasse
           </h3>
           <img src="./img/cocinero-alain.png" alt="cocinera Alain Ducasse">
-          <a href="https://es.wikipedia.org/wiki/Alain_Ducasse" target="_blank"><p>Saber más</p></a>
+          <a href="https://es.wikipedia.org/wiki/Alain_Ducasse" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
         <div class="flex cocineroX">
           <h3>
             Buddy Valastro
           </h3>
           <img src="./img/cocinero-buddy.jpg" alt="cocinera Buddy Valastro">
-          <a href="https://es.wikipedia.org/wiki/Buddy_Valastro" target="_blank"><p>Saber más</p></a>
+          <a href="https://es.wikipedia.org/wiki/Buddy_Valastro" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
         <div class="flex cocineroX">
           <h3>
             Germán Martitegui
           </h3>
           <img src="./img/cocinero-german.jpg" alt="cocinera Germán Martitegui">
-          <a href="https://es.wikipedia.org/wiki/Germ%C3%A1n_Martitegui" target="_blank"><p>Saber más</p></a>
+          <a href="https://es.wikipedia.org/wiki/Germ%C3%A1n_Martitegui" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
         <div class="flex cocineroX">
           <h3>
             Jimena Monteverde
           </h3>
           <img src="./img/cocinera-jimena.png" alt="cocinera Jimena Monteverde">
-          <a href="https://jimenacocina.com/sobre-mi/" target="_blank"><p>Saber más</p></a>
+          <a href="https://jimenacocina.com/sobre-mi/" target="_blank">
+            <p>Saber más</p>
+          </a>
         </div>
       </div>
+
+      <h3 class="titulos-home">Top Recetas:</h3>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/tortilla01.jpg" class="card-img-top" alt="tortilla de papas">
+              <div class="card-body">
+                <h5 class="card-title">1ro: Tortilla de papas</h5>
+                <p class="card-text">Una exquisita receta española que es muy facil de preparar.</p>
+                <a href="receta0.html" class="btn btn-primary">Ver receta</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/nioquis.jpg" class="card-img-top" alt="ñoquis">
+              <div class="card-body">
+                <h5 class="card-title">2do: Ñoquis de ricota</h5>
+                <p class="card-text">Una riquisima pasta que te va dejar con la boquiabierta</p>
+                <a href="https://www.paulinacocina.net/noquis-de-ricota/21997" target="_blank" class="btn btn-primary">Ver receta</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/canelones.jpg" class="card-img-top" alt="canelones">
+              <div class="card-body">
+                <h5 class="card-title">3ro: Canelones</h5>
+                <p class="card-text">Aprende a hacer canelones de verdura, de carne y de pollo, también de choclo.</p>
+                <a href="https://www.paulinacocina.net/rellenos-de-canelones/21769" target="_blank" class="btn btn-primary">Ver receta</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/estofado-carne.jpg" class="card-img-top" alt="estofado de carne">
+              <div class="card-body">
+                <h5 class="card-title">4to: Estofado de carne</h5>
+                <p class="card-text">Aprende hacer un buen estofado de carne, y no es uno cualquiera, es un estofado de carne de ternera que se deshace en la boca!</p>
+                <a href="receta1.html" class="btn btn-primary">Ver receta</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
 
-  
+
   <footer id="footer" class="box-s">
     <div id="copyright" class="container flex">
       <div id="icono-pag">
         <img class="logo-pag" src="./img/chef-64.png" alt="Logo Chef">
       </div>
-      <p>Copyright "Chef en tu casa" - 2021 | Diseñado por <a target="_blank" href="https://github.com/matiaschanquia">Matias Chanquia Dev.</a> </p>
+      <p>Copyright "Chef en tu casa" - 2021 | Diseñado por <a target="_blank"
+          href="https://github.com/matiaschanquia">Matias Chanquia Dev.</a> </p>
       <p>Defensa de las y los consumidores. Para reclamos <a href="contacto.html">click aquí</a>.</p>
       <div id="logos-redes-footer" class="logos-efect flex">
         <a href="#"><img src="./img/redes-icons/wsp2.png" alt="logo de whatsapp"></a>
@@ -146,6 +215,9 @@
       </div>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
