--- a/receta0.html
+++ b/receta0.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Chef en tu casa, receta tortilla de papas con sus ingredientes y pasos."/>
@@ -9,6 +8,7 @@
   <meta name="copyright" content="Chef en tu casa"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chef en tu casa | Tortilla de papas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,8 +48,9 @@
     </ol>
   </nav>
 
-  <main id="main" class="box-s flex">
-    <section id="section" class="box-s">
+  <main id="main" class="box-s container-fluid">
+    <div class="row">
+      <section id="section" class="box-s col-sm-12 col-md-8 col-lg-9">
       <article id="article">
         <div id="presentacion">
           <h1>
@@ -152,9 +153,9 @@
         </div>
 
       </article>
-    </section>
+      </section>
 
-    <aside id="aside" class="box-s">
+      <aside id="aside" class="box-s col-sm-12 col-md-4 col-lg-3">
       <div id="cocinero-info">
         <h3>
           Cocinero:
@@ -189,7 +190,8 @@
         <br><br>
         <h5>La hora de cocinar es un tiempo para consentirse y pasarla bien. Sin embargo, hay procedimientos que nos hacen la vida más fácil si no somos expertos y muchos tips para cocinar más rápido y mejor.</h5>
       </div>
-    </aside>
+      </aside>
+    </div>
   </main>
 
   <footer id="footer" class="box-s">
@@ -207,6 +209,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
