--- a/receta1.html
+++ b/receta1.html
@@ -8,6 +8,7 @@
     <meta name="copyright" content="Chef en tu casa"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef en tu casa | Estofado de carne</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -178,5 +179,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
