--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
     rel="stylesheet">
+  <script>
+    alert("¿Esta dispuesto a ver el mejor sitio de recetas del mundo mundial?")
+  </script>
 </head>
 
 <body>
@@ -208,15 +211,18 @@
           href="https://github.com/matiaschanquia">Matias Chanquia Dev.</a> </p>
       <p>Defensa de las y los consumidores. Para reclamos <a href="contacto.html">click aquí</a>.</p>
       <div id="logos-redes-footer" class="logos-efect flex">
-        <a href="#"><img src="./img/redes-icons/wsp2.png" alt="logo de whatsapp"></a>
+        <a href="#" onclick="mensaje_wsp()"><img src="./img/redes-icons/wsp2.png" alt="logo de whatsapp"></a>
         <a href="#"><img src="./img/redes-icons/facebook2.png" alt="logo de facebook"></a>
         <a href="#"><img src="./img/redes-icons/insta2.png" alt="logo de instagram"></a>
         <a href="#"><img src="./img/redes-icons/youtube2.png" alt="logo de youtube"></a>
+        <a href="#" onclick="mis_datos()"><img src="./img/redes-icons/account.png" alt="cuenta"></a>
       </div>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script src="js/alert.js">
   </script>
 </body>
 
